zu Authorenliste hinzugefügt

--- a/skript.tex
+++ b/skript.tex
@@ -39,7 +39,7 @@
 
 \begin{document}
 
-\author{Sebastian Bechtel}
+\author{Sebastian Bechtel, Isburg Knof}
 \title{Einführung in die Algebra}
 \date{15. April 2015}
 
