--- a/skript.tex
+++ b/skript.tex
@@ -16,6 +16,7 @@
 % Einstellungen, wenn man deutsch schreiben will, z.B. Trennregeln
 \usepackage[utf8]{inputenc}  % für Unix-Systeme
 
+
 % environments
 \newtheorem{thm}{Theorem}
 \newtheorem{lemma}{Lemma}
@@ -164,6 +165,122 @@
 
 \begin{defn}
     Eine Untergruppe heißt \underline{echt}, falls sie nicht trivial ist.
+\end{defn}
+
+\begin{lemma}
+	Es sei $(H_{j})_{j \in J}$ eine Familie von Untergruppen $H_{j} \subset G$. Dann ist $\bigcap_{j 		\in J}H_{j}$ eine Untergruppe von G.
+\end{lemma}
+
+\begin{proof}
+	Übung
+\end{proof}
+
+\begin{defn}
+	Es sei M eine Teilmenge von G. Die \underline{von M erzeugte Untergruppe} ist der Durchschnitt 	aller Untergruppen, die M enthalten.
+\end{defn}
+
+\begin{notation}
+	$\langle M \rangle =\bigcup_{M \subset H \subset G}H$, wobei H Untergruppe
+\end{notation}
+
+\begin{nb}
+	\begin{enumerate}[label=(\alph*)]
+		\item $\langle \emptyset \rangle = \lbrace e \rbrace$
+		\item Für $M \neq \emptyset$ gilt: $\langle M \rangle = \lbrace m_{1}^{\varepsilon_{1}} \cdot ... \cdot m_{n}^{\varepsilon_{n}} : m_{1},...,m_{n} \in M, \varepsilon_{1},...,\varepsilon_{n} \in \lbrace -1,+1\rbrace, n \geq 0 \rbrace$
+		\item Für $M = \lbrace g \rbrace$ gilt: $\langle g \rangle = \lbrace g^{n} : n \in \mathbb{Z} \rbrace$. Von g erzeugte zyklische Untergruppe von G.
+	\end{enumerate}
+\end{nb}
+
+\begin{defn}
+	G heißt \underline{zyklisch}, falls $G = \langle g \rangle$ für ein $g \in G$ gilt. \newline
+	Ist $G = \langle M \rangle$ mit M endlich, so heißt G \underline{endlich erzeugt}.
+\end{defn}
+
+\begin{defn}
+	\begin{enumerate}[label=(\roman*)]
+		\item Die \underline{Ordnung einer Gruppe} $G$ ist $ord(G)=\vert G \vert$.
+		\item Die \underline{Ordnung eines Elements} $g \in G$ ist $ord(g)=ord(\langle g \rangle)$.
+		\item Ist $ord(g)$ endlich, dann hat g \underline{endliche Ordnung}.
+	\end{enumerate}
+\end{defn}
+
+\begin{notation}
+    $(n,s)$ bezeichnet den größten gemeinsamen Teiler.
+\end{notation}
+
+\begin{thm}
+	Sei $G$ Gruppe, $g \in G$
+	\begin{enumerate}
+		\item g hat endliche Ordnung $\Longleftrightarrow$ alle Potenzen von g sind verschieden
+		\item g hat endliche Ordnung $\Longleftrightarrow$ $\exists m>0: g^{m}=e$ \newline Dann gilt:
+			\begin{enumerate}[label=(\alph*)]
+				\item $n := ord(g) = min \lbrace m>0 : g^{m}=e \rbrace$
+				\item $g^{m}=e \Longleftrightarrow m=nk$ mit $k \in \mathbb{Z}$
+				\item $\langle g \rangle = \lbrace e, g^{1},...,g^{n-1}\rbrace$
+			\end{enumerate}
+		\item $ord(g^{s}) = \frac{n}{(n,s)}$ für $n = ord(g)$ endlich
+	\end{enumerate}
+\end{thm}
+
+\begin{proof}
+	\begin{enumerate}
+		\item Wir nehmen an: Für $i,j \in \mathbb{Z}$, oBdA $j>i$ gilt $g^{i}=g^{j}$. \newline Dann gilt $g^{j-i}=g^{j}(g^{i})^{-1}=e$. \newline Es sei dann n die kleinste positive Zahl, die $g^{n}=e$ erfüllt. Sei $m \in \mathbb{Z}$ beliebig. Der Divisionsalgorithmus liefert: $m=kn+r$ für $0 \leq r < n$ und $k,r \in \mathbb{Z}$. Dann gilt: \newline $g^{m}=g^{kn+r}=g^{kn}g^{r}=(g^{n})^{k}g^{r}=eg^{r}=g^{r}$. \newline Daraus folgt $\langle g \rangle = \lbrace g^{m} : m \in \mathbb{Z}\rbrace = \lbrace g^{r} : r=0,...,n-1\rbrace$. Besonders gilt $ord(g)=n$ ist endlich. \newline $\lceil$ Dies zeigt $\Rightarrow$, $\Leftarrow$ klar, dann ist $\langle g \rangle = \lbrace g^{m} : m \in \mathbb{Z}\rbrace$ unendlich $\rfloor$
+		\item Alle $g^{r}$ mit $0 \leq r \leq n-1$ sind verschieden, da: \newline $g^{i}=g^{j} \Rightarrow g^{j-i}=e \Rightarrow j-i = kn$ mit $k \in \mathbb{Z} \Rightarrow i \equiv j (modn) \Rightarrow i=j$ falls $0<i,j<n-1$. \newline Dies liefert $g^{r}$ mit $0 \leq r \leq n-1$ sind paarweise verschieden und es gilt: \newline $ord(g)=n$. $\lceil a$ und $c\rfloor$ \newline Aus dem Divisionsalgorithmus folgt b: $g^{m}=e \Leftrightarrow e=g^{kn+r}=g^{r}$ mit $m = kn+r, 0 \leq r < n \Leftrightarrow r=0$. Also $m=kn$ mit $k \in \mathbb{Z}$.
+		\item Es sei $m=ord(g^{s}), n =ord(g)$. Aus $(g^{s})^{m}=e$ folgt (siehe 2), dass $n$ ein Teiler von $sm$ ist. Dies liefert: $\frac{n}{(s,n)} \vert \frac{s}{(s,n)}m$. Somit $\frac{n}{(s,n)} \vert m$. \newline Nun möchten wir noch zeigen: $m \vert \frac{n}{(s,n)}$. $(g^{s})^{\frac{n}{(s,n)}} = (g^{n})^{\frac{s}{(s,n)}}=e^{\frac{s}{(s,n)}}=e$. Daraus folgt $m \vert \frac{n}{(s,n)}$ (wegen 2). \newline Also gilt $m = \frac{n}{(s,n)}$. 
+	\end{enumerate}
+\end{proof}
+
+\begin{lemma}
+	Wir können alle Untergruppen einer zyklischen Gruppe beschreiben mit $G = \langle g \rangle, H \subset G$, es sei $h \in H, h \neq e$. Dann gilt: $h = g^{k}$.
+\end{lemma}
+
+\begin{proof}
+	Wir setzen: $m = min \lbrace k>0 : g^{k} \in H \rbrace$. \newline $\lceil$ Existiert: $G= \langle g \rangle = \langle g^{-1} \rangle, h = g^{k}, k<0$, dann ersetzen wir $h$ durch $h^{-1} \rfloor$ \newline Wir wollen zeigen: $\langle g^{m} \rangle = H$ 
+	\begin{enumerate}
+		\item $\langle g^{m} \rangle \subset H$ gilt wegen $g^{m} \in H$
+		\item Es sei $j \in  \mathbb{Z}$ mit $g^{j} \in H$. Divisionsalgorithmus liefert $j=lm+r$ mit $0 \leq r < m$: $g^{j} \in H \Rightarrow g^{r}=g^{-lm}g^{lm+r}=(g^{m})^{-l}g^{j}$. Also $g^{r} \in H$. Aus der Minimalität von M folgt $r=0$. Dies liefert $g^{j}=(g^{m})^{l} \in \langle g^{m} \rangle$ und somit gilt: $H \subset \langle g^{m} \rangle$ und die zwei Untergruppen stimmen überein.
+	\end{enumerate}
+\end{proof}
+
+Ähnlich kann man zeigen:
+
+\begin{thm}
+	Alle Untergruppen einer zyklischen Gruppe sind zyklisch. Ist $ord(G)=n$ endlich und $m$ ein Teiler von $n$, so ist $H = \langle g^{\frac{n}{m}}\rangle$ die einzige Untergruppe der Ordnung $m$.
+\end{thm}
+
+\begin{defn}
+	Sei $H$ eine Untergruppe der Gruppe $G$. Dann kann man die folgende Äquivalenzrelation definieren: \newline $(x,y) \in G^{2}: x \sim_{H} y \Leftrightarrow x = yh$ für $h \in H$ \newline $\lceil$Äquivalenzrelation wegen Gruppenaxiomen für $H\rfloor$
+\end{defn}
+
+\begin{defn}
+	Die Äquivalenzklassen bzgl. $\sim_{H}$ heißen \underline{Linksnebenklassen}.
+\end{defn}
+
+\begin{notation}
+	Für $a \in G, aH = {ah : h \in H}$
+\end{notation}
+
+\begin{nb}
+	Es gelten folgende Eigenschaften: 
+	\begin{itemize}
+		\item Die Abbildung $H \rightarrow aH, h \mapsto ah$ ist eine Bijektion. Besonders gilt: $\vert aH \vert = \vert H \vert$ für alle $a \in G$. \newline $\lceil$Die Abbildung ist bijektiv, da sie umkehrbar ist: $aH \rightarrow H, b \mapsto a^{-1}b$ ist die Umkehrfunktion$\rfloor$
+		\item $aH \neq bH \Rightarrow aH \cap bH = \emptyset$, d.h. sie sind disjunkt. \newline $\lceil x \in aH \neq bH \Rightarrow x = ah_{1} = bh_{2}$ für $h_{1},h_{2} \in H \Rightarrow a=bh_{2}h_{1}^{-1} \in bH \Rightarrow ah= b(h_{2}h_{1}^{-1}h) \in bH$ für alle $h \in H \Rightarrow aH \subset bH$. Ähnlich gilt $bH \subset aH$. Daraus folgt $aH=bH.\rfloor$
+	\end{itemize}
+\end{nb}
+
+\begin{defn}
+	$G/H = \lbrace aH : a \in G \rbrace$ ist die \underline{Menge der Linksnebenklassen}. \newline Der Index von $H$ ist die Mächtigkeit von $G/H$, d.h. \underline{Index} [$G:H$]$:=\vert G/H \vert$
+\end{defn}
+
+\begin{nb}
+	\begin{itemize}
+	 	\item $\vert G \vert = [G:H]\vert H\vert$
+	 	\item Analog ist $a \sim_{H} b$ mit $a,b \in G \Leftrightarrow a=hb$ für ein $h \in H$ ("rechtsäquivalent bzgl. H") eine Äquivalenzrelation. \newline \underline{Rechtsnebenklassen}: $Ha=\lbrace ha : h \in \mathbb{Z} \rbrace$ mit $a \in G$ \newline Bijektion: Für $a \in G$ $aH \rightarrow Ha, x \mapsto a^{-1}xa$
+	\end{itemize}
+\end{nb}
+
+\begin{defn}
+	$H \backslash G$ ist die \underline{Menge der Rechtsnebenklassen}. Dann gilt: $\vert H \backslash G \vert = \vert G/H \vert$ \newline $\lceil$Bijektion: $H \backslash G \rightarrow G/H, Hb \mapsto b^{-1}H \rfloor$
 \end{defn}
 
 \end{document}
